PHP for the profile page #63
not authenticated, the php just pulls user with ID=1 in the database for now

--- a/React Website/src/styles/footer.css
+++ b/React Website/src/styles/footer.css
@@ -7,7 +7,7 @@
     align-items: center;
     flex-direction: column;
     padding-top: 10px;
-    position: fixed;
+    position: bottom;
     bottom: 0;
   }
   
