--- a/React Website/src/residental-components/amenities/amenities.css
+++ b/React Website/src/residental-components/amenities/amenities.css
@@ -6,19 +6,20 @@
 
 
 .amenities-column {
-    float: left;
-    width: 33.33%;
+    text-align: center;
+    margin-bottom: 40px;
     display: flex;
     align-items: center;
-    margin-bottom: 40px;
+    justify-content: center;
   }
   
 .amenities-icon {
-    padding-left: 50px;
+    padding-right: 5%;
+    padding-left: 1%;
 }
 
 .amenities-type {
-    padding-left: 20px;
+
     color: #8A8A8A;
-    font-size: 17.5px;
+    font-size: 20px;
 }
