--- a/React Website/src/styles/contact.css
+++ b/React Website/src/styles/contact.css
@@ -2,8 +2,10 @@
     font-size: 50px;
     display: flex;
     min-height: 75vh;
-    text-align: left;
+    text-align: center;
     align-items: center;
+    padding-left: 5%;
+    padding-right: 5%;
     justify-content: center;
     background: linear-gradient(45deg,lightblue, rgb(131, 250, 250), lightblue);
 }
