--- a/React Website/src/styles/searchbar.css
+++ b/React Website/src/styles/searchbar.css
@@ -2,6 +2,9 @@
     text-align: center;
     height: 80px;
     margin-left: 20%;
+    width: 300%;
+    display: flex;
+    justify-content: center;
 }
 
 .searchInputs {
@@ -9,12 +12,14 @@
     width: 60%;
     display: inline-flex;
     height: 30px;
+    width: 100%;
 }
 
 .searchInputs input {
-    background-color: white;
+    background-color: beige;
     border: 0;
-    border-radius: 2px;
+    border-radius: 5px;
+    border: 2px solid #bbb;
     border-top-right-radius: 0px;
     border-bottom-left-radius: 0px;
     font-size: 15px;
@@ -30,7 +35,8 @@
     border-radius: 2px;
     border-top-right-radius: 0px;
     border-bottom-left-radius: 0px;
-    background-color: white;
+    background-color: beige;
+    border: 2px solid #bbb;
     display: grid;
     place-items: center;
 }
@@ -41,4 +47,37 @@ input:focus {
 
 .searchIcon svg{
     font-size: 35px;
+}
+.dataResults {
+    margin-top: 5px;
+    width: 300px;
+    height: 200px;
+    background-color: wheat;
+    box-shadow: rgba(0, 0,0, 0.35) 0px, 5px, 15px;
+    overflow: hidden;
+    overflow-y: auto;
+}
+.dataResults::-webkit-scrollbar{display: none;}
+
+.dataResults .dataItem{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    color: black;
+}
+
+.dataItem p{
+    margin-left: 10px;
+}
+a {
+    text-decoration: none;
+}
+
+a:hover{ 
+    background-color: lightgray;
+}
+.clearBtn {
+    cursor: pointer;
+
 }
